finished nutrition facts

--- a/frontend/todo.txt
+++ b/frontend/todo.txt
@@ -2,3 +2,7 @@ major:
 - search peanut
 - more nutrients
 - serving size
+
+minor:
+- toast for error in nutrition facts useEffect
+- bold only the ingredients word
