making the frontend code food api agnostic

--- a/frontend/todo.txt
+++ b/frontend/todo.txt
@@ -7,3 +7,4 @@ minor:
 - toast for error in nutrition facts useEffect
 - bold only the ingredients word
 - android vs ios design
+- refactor the iskeyboardup code
