remove fp16 precision for CPU

--- a/ml/capstone_ml_small-CPU.ipynb
+++ b/ml/capstone_ml_small-CPU.ipynb
@@ -52,7 +52,7 @@
     "# from google.colab import drive\n",
     "# drive.mount('/content/gdrive')\n",
     "\n",
-    "model, _, preprocess = open_clip.create_model_and_transforms('ViT-H-14', pretrained='laion2b_s32b_b79k', precision=\"fp16\")"
+    "model, _, preprocess = open_clip.create_model_and_transforms('ViT-H-14', pretrained='laion2b_s32b_b79k')"
    ]
   },
   {
